8171418: Remove jdeps internal --include-system-modules option
Reviewed-by: dfuchs, lancea